# nano-vllm-rs

./: .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-MIT  Makefile  README.md  build.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
docs/: README.md  architecture.md  configuration.md  continuous_batching_visual.md  engine.md  errors.md  flash_attention.md  model_loader.md  paged_attention.md  qwen3_architecture.md  scheduler.md  sequence_kv_cache.md  speculative_decoding.md
kernels/: flash_attn_fwd.cu
src/: config.rs  error.rs  lib.rs  main.rs
src/attention/: flash.rs  mod.rs  paged.rs
src/core/: block.rs  block_manager.rs  kv_cache.rs  mod.rs  sequence.rs
src/educational/: dashboard.rs  explanations.rs  mod.rs  narrator.rs  tutorial.rs  visualizers.rs  xray.rs
src/engine/: llm.rs  mod.rs  sampler.rs
src/model/: attention.rs  decoder.rs  loader.rs  mlp.rs  mod.rs  norm.rs  qwen3.rs  rope.rs
src/scheduler/: batch.rs  mod.rs
src/speculative/: config.rs  engine.rs  mod.rs  sampler.rs
tests/: block_manager_test.rs  block_test.rs  engine_test.rs  flash_attention_test.rs  kv_cache_test.rs  model_attention_test.rs  model_decoder_test.rs  model_loader_test.rs  model_mlp_test.rs  model_norm_test.rs  model_qwen3_test.rs  model_rope_test.rs  paged_attention_test.rs  qwen3_inference_test.rs  rejection_sampler_test.rs  sampler_test.rs  scheduler_test.rs  sequence_test.rs  speculative_config_test.rs  speculative_inference_test.rs
