[package]
name = "nano-vllm-rs"
version = "0.1.0"
edition = "2021"
description = "Rewrite nano-vllm in Rust"
repository = "https://github.com/appleparan/nano-vllm-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
