[package]
name = "nano-vllm-rs"
version = "0.1.0"
edition = "2024"
description = "Rewrite nano-vllm in Rust"
repository = "https://github.com/appleparan/nano-vllm-rs"
license = "MIT"
rust-version = "1.93"

[dependencies]
# Tensor operations
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# Tokenization & model loading
tokenizers = "0.22"
hf-hub = "0.4"
safetensors = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random number generation
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.8.2"

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }

[features]
default = []
cuda = ["candle-core/cuda"]

[[bin]]
name = "nano-vllm"
path = "src/main.rs"

[lib]
name = "nano_vllm"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
uninlined_format_args = "warn"
needless_return = "warn"
redundant_closure = "warn"
manual_range_contains = "warn"
module_inception = "warn"
bool_comparison = "warn"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
